[update] deviseのパスワードを使用できるようにfixturesに追加

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,7 @@
 steve:
   name: 'steve'
   email: 'steve@example.com'
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
 david:
   name: ''
