--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
-  title: MyString
-  content: MyText
+  user: steve
+  title: はじめての日報です
+  content: steveの日報の内容です
 
 two:
-  user: two
-  title: MyString
-  content: MyText
+  user: david
+  title: はじめての日報です
+  content: davidの日報の内容です
